Update DOC - cart API
